--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,23 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
+import About from "../components/About.astro";
+import Contact from "../components/Contact.astro";
+import Intro from "../components/Intro.astro";
+import Nav from "../components/Nav.astro";
+import Projects from "../components/Projects.astro";
+import Technologies from "../components/Technologies.astro";
+import Plane from "../components/Plane.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+  <Plane />
+  <Nav />
+  <Intro />
+  <About />
+  <Technologies />
+  <Projects />
+  <Contact />
 </Layout>
