fix build error with image

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import blogSS from "../assets/blogSS.png"
 import chartSS from "../assets/chartApp.png"
-import toDoSS from "../assets/toDo-List.png"
+import toDoSS from "../assets/ToDoList.png"
 import compoundSS from "../assets/compound.png"
 import budgetSS from "../assets/budgetApp.png"
 import weatherApp from "../assets/weatherApp.png"
