--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -192,6 +192,7 @@ import { Icon } from "astro-icon/components";
         document.getElementById("name").value = "";
         document.getElementById("email").value = "";
         document.getElementById("message").value = "";
+        console.log(res);
       })
       .catch((err) => console.error(err));
   });
