fix image issue

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@ import blogSS from "../assets/blogSS.png";
 import chartSS from "../assets/chartApp.png";
 import toDoSS from "../assets/ToDoList.png";
 import compoundSS from "../assets/compound.png";
-import budgetSS from "../assets/budgetApp.png";
+import budgetSS from "../assets/BudgetApp.png";
 import weatherApp from "../assets/weatherApp.png";
 ---
 
