--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,7 +5,7 @@ import chartSS from "../assets/chartApp.png";
 import toDoSS from "../assets/ToDoList.png";
 import compoundSS from "../assets/compound.png";
 import budgetSS from "../assets/BudgetApp.png";
-import weatherApp from "../assets/weatherApp.png";
+import UnityRPG from "../assets/UnityRPG.png";
 ---
 
 <div id="portfolio">
@@ -35,7 +35,7 @@ import weatherApp from "../assets/weatherApp.png";
           <div class="image-container">
             <Image src={chartSS} loading="lazy" alt="Chart app screenshot" />
             <div class="overlay-text">
-              Chart visualization app built with Next.js, Django, and Docker
+              Stock analysis app built with Next.js, Django, and Docker
             </div>
           </div>
         </a>
@@ -92,18 +92,19 @@ import weatherApp from "../assets/weatherApp.png";
       </div>
       <div class="project">
         <a
-          aria-label="Link to weather app"
-          href="https://eslang50.github.io/Weather-App/"
+          aria-label="Link to UnityRPG github"
+          href="https://github.com/eslang50/UnityRPG"
           target="_blank"
         >
           <div class="image-container">
             <Image
-              src={weatherApp}
+              src={UnityRPG}
               loading="lazy"
-              alt="Weather app screenshot"
+              alt="UnityRPG game screenshot"
             />
             <div class="overlay-text">
-              Weather app built with vanilla js, html, css, and OpenWeather API
+              RPG game built with Unity3D and use of c# scripting, particles,
+              and shaders
             </div>
           </div>
         </a>
