--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,17 +7,16 @@ import pfp from "../assets/profile.jpg";
   <div class="md:px-24 px-8">
     <div class="row">
       <div class="md:basis-1/3 basis-full">
-        <Image alt="profile" src={pfp} class="rounded-lg w-full " />
+        <Image alt="profile" src={pfp} class="rounded-lg w-full" />
       </div>
-      <div class="md:basis-3/5  basis-full">
+      <div class="md:basis-3/5 basis-full">
         <h2 class="sub-title">About Me</h2>
         <p id="about-me">
-          Hi! My name is Ethan Liu and I am currently a master's student at
-          Northeastern studying Software Engineering. As a kid, I loved the
-          process of building new things and seeing creations to completion.
-          From making origami during homeroom of elementary school to building
-          software apps on campus, I hope to bring my skills to wherever I land
-          in the future!
+          Hi! My name is Ethan Liu and I am currently working as a Software
+          Engineer at Gunnison Consulting. As a kid, I loved the process of
+          building new things and seeing creations to completion. From making
+          origami during homeroom of elementary school to building software apps
+          on campus, I hope to bring my skills to wherever I land in the future!
         </p>
         <div class="tab-titles">
           <p class="tab-links active-link" data-tab="skills">Skills</p>
@@ -39,6 +38,14 @@ import pfp from "../assets/profile.jpg";
         </div>
         <div class="tab-contents" id="experience">
           <ul>
+            <li>
+              <span>2025 - Present</span>
+              <br /> Software Engineer at Gunnison Consulting
+            </li>
+            <li>
+              <span>2025</span>
+              <br /> Software Engineer Intern at Evolv Technology
+            </li>
             <li>
               <span>2024</span>
               <br /> Software Engineer Intern at Hologic
